[gd_scene load_steps=22 format=2]

[ext_resource path="res://resources/art/textbox.png" type="Texture" id=1]
[ext_resource path="res://resources/art/troll/closeup1.png" type="Texture" id=2]
[ext_resource path="res://resources/art/troll/closeup2.png" type="Texture" id=3]
[ext_resource path="res://scenes/conversation.gd" type="Script" id=4]
[ext_resource path="res://resources/spookharder_by_gassstype.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://resources/art/endings/badending.png" type="Texture" id=6]
[ext_resource path="res://resources/art/troll/closeup6.png" type="Texture" id=7]
[ext_resource path="res://scenes/ending.gd" type="Script" id=8]
[ext_resource path="res://resources/cees_hand_font_by_nthspace.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://resources/art/troll/closeup5.png" type="Texture" id=10]
[ext_resource path="res://resources/art/troll/closeup3.png" type="Texture" id=11]
[ext_resource path="res://resources/art/troll/closeup4.png" type="Texture" id=12]

[sub_resource type="InputEventAction" id=2]
action = "move_right"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 7 ) ],
"loop": true,
"name": "der",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 10 ) ],
"loop": true,
"name": "izq",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 32
outline_color = Color( 0.368627, 0.368627, 0.368627, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="InputEventAction" id=6]
action = "select_b"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="InputEventAction" id=8]
action = "select_a"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[node name="conversation" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
shortcut = SubResource( 3 )
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -800.0
margin_top = -600.0

[node name="trollsprite" type="AnimatedSprite" parent="."]
position = Vector2( 482.318, 200.323 )
scale = Vector2( 1.38896, 1.20214 )
frames = SubResource( 1 )
playing = true

[node name="textbox" type="Sprite" parent="."]
position = Vector2( 397.25, 480.25 )
scale = Vector2( 1.23343, 0.768371 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 55.0
margin_top = 430.0
margin_right = 747.0
margin_bottom = 563.0
rect_rotation = -3.0
custom_colors/font_color = Color( 0.352941, 0.352941, 0.352941, 1 )
custom_fonts/font = SubResource( 4 )
text = "..."
align = 1
valign = 1
autowrap = true

[node name="b" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -309.0
margin_bottom = 88.0
custom_colors/font_color = Color( 0.45098, 0.45098, 0.45098, 1 )
custom_fonts/font = SubResource( 5 )
shortcut = SubResource( 7 )
text = "b: acabar con todo"
flat = true
icon_align = 1

[node name="a" type="Button" parent="."]
margin_right = 309.0
margin_bottom = 88.0
custom_colors/font_color = Color( 0.45098, 0.45098, 0.45098, 1 )
custom_fonts/font = SubResource( 5 )
shortcut = SubResource( 9 )
text = "a: salir de mount eerie"
flat = true

[node name="Tween" type="Tween" parent="."]

[node name="ending" type="Sprite" parent="."]
position = Vector2( 400, 300 )
texture = ExtResource( 6 )
script = ExtResource( 8 )

[connection signal="pressed" from="." to="." method="_on_conversation_pressed"]
[connection signal="pressed" from="b" to="." method="_on_b_pressed"]
[connection signal="pressed" from="a" to="." method="_on_a_pressed"]
